--- a/public/backend/css/custom-auth-style.css
+++ b/public/backend/css/custom-auth-style.css
@@ -90,6 +90,9 @@ h2 {
   background-color: #cda45e;
   border-color: #cda45e;
 }
+.btn {
+  border-radius: 2rem;
+}
 .btn-primary:hover {
   color: #fff;
   background-color: #d4ad6c;
